--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                 <a class="nav-link active" aria-current="page" href="#"><i class="bi bi-house-fill me-2"></i>Home</a>
               </li>
               <li class="nav-item rounded">
-                <a class="nav-link" href="menu.html"><i class="bi bi-telephone-fill me-2" ></i>Burgers</a>
+                <a class="nav-link" href="http://127.0.0.1:5500/admin.html/addCustomer.html"><i class="bi bi-telephone-fill me-2" ></i>AddCustomer</a>
               </li>
               <li class="nav-item dropdown rounded">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person-fill me-2"></i>Admin</a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Settings</a></li>
+                  <li><a class="dropdown-item" href="">AddCustomer</a></li>
                   <li>
                     <hr class="dropdown-divider">
                   </li>
