--- a/admin.html/History.html
+++ b/admin.html/History.html
@@ -7,81 +7,171 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="card">
-        <h3>Customer Information</h3>
-        <p><strong>Name:</strong> <span id="cardName"></span></p>
-        <p><strong>Mobile:</strong> <span id="cardMobile"></span></p>
-        <p><strong>Address:</strong> <span id="cardAddress"></span></p>
+    <h3>Customer Information</h3>
+    <div id="card-container">
+
     </div>
     
-    <style>
+<style>
+  body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #fffbf0;
+    margin: 0;
+    padding: 0;
+  }
 
-
-.card {
-    background-color: #fff;
-    padding: 20px;
-    margin-top: 20px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.card h3 {
-    margin-bottom: 15px;
-    color: #333;
-}
-
-.card p {
-    font-size: 16px;
-    color: #555;
-}
-
-.card p strong {
+  h3 {
+    text-align: center;
+    color: #d35400;
+    font-size: 28px;
     font-weight: bold;
-}
-    </style>
+    margin: 20px 0;
+  }
+
+  #card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+  }
+
+  .card {
+    background-color: #fff8e1;
+    padding: 20px;
+    margin: 15px;
+    border: 2px solid #ffcc80;
+    border-radius: 15px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    max-width: 300px;
+    text-align: center;
+  }
+
+  .card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
+  }
+
+  .card h3 {
+    margin-bottom: 10px;
+    color: #e64a19;
+  }
+
+  .card p {
+    font-size: 16px;
+    color: #6d4c41;
+    margin: 5px 0;
+  }
+
+  .card p strong {
+    font-weight: bold;
+    color: #d35400;
+  }
+
+
+  body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #f8f3e4;
+    margin: 0;
+    padding: 0;
+  }
+
+  h3 {
+    text-align: center;
+    color: #d35400;
+    font-size: 32px;
+    font-weight: bold;
+    margin: 20px 0;
+  }
+
+  #card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+  }
+
+  .card {
+    background-color: #fff8e1;
+    padding: 20px;
+    margin: 15px;
+    border: 2px solid #ffc107;
+    border-radius: 15px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    max-width: 300px;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+  }
+
+  .card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
+  }
+
+  .card h3 {
+    margin-bottom: 10px;
+    color: #e64a19;
+  }
+
+  .card p {
+    font-size: 18px;
+    color: #5d4037;
+    margin: 5px 0;
+  }
+
+  .card p strong {
+    font-weight: bold;
+    color: #d35400;
+  }
+
+  .card p:first-of-type {
+    font-size: 20px;
+    margin-top: 15px;
+    color: #ff5722;
+  }
+
+  /* Add some spacing between cards */
+  .card:not(:last-child) {
+    margin-bottom: 20px;
+  }
+
+  /* For smaller screens, adjust card size */
+  @media (max-width: 768px) {
+    .card {
+      max-width: 90%;
+    }
+  }
+</style>
+
+
+
+</style>
+
+
+
+
+    
 
 <script>
-    // Retrieve stored order objects from localStorage
-    const storedOrdersObjects = JSON.parse(localStorage.getItem('orders')) || [];
-    console.log(storedOrdersObjects);
 
-    const cardContainer = document.getElementById("cardContainer");
+console.log(JSON.parse(localStorage.getItem('customers')));
+let history_array = JSON.parse(localStorage.getItem('customers'));
+let card_container = document.getElementById("card-container");
+let i = 0;
+history_array.forEach(element => {
+    card_container.innerHTML += 
+`
+        <div class="card">
+            <p><strong>Name:${history_array[i].name}</strong></p>
+            <p><strong>Mobile:${history_array[i].number}</strong></p>
+            <p><strong>Address:${history_array[i].address}</strong></p>
+        </div>
 
-// Generate carr
-storedOrdersObjects.forEach(order => {
-// Create a card div
-const card = document.createElement("div");
-card.style.cssText = `
-    background-color: #2a2a2a;
-    color: white;
-    border-radius: 8px;
-    padding: 15px;
-    width: 300px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-`;
-
-// Create order details
-card.innerHTML = `
-    <h3>Order #${order.orderId.toString().padStart(4, '0')}</h3>
-    <p><strong>Customer:</strong> ${order.name}</p>
-    <p><strong>Items:</strong></p>
-    <ul>
-        ${order.items
-            .map(
-                item => `
-            <li>${item.itemName} ${item.qty} - LKR ${item.price * item.qty}</li>
-        `
-            )
-            .join("")}
-    </ul>
-    <p><strong>Total:</strong> LKR ${order.total}</p>
- 
-`;
-
-// Append card to the container
-cardContainer.appendChild(card);
+`
+i++;
 });
+
 </script>
 </body>
 
