--- a/admin.html/SearchCustomer.html
+++ b/admin.html/SearchCustomer.html
@@ -79,6 +79,8 @@
         <input type="button" value="MenuPage" id="" onclick="gomenu()" />
       </div>
 
+      <script src="SearchCustomer.html"></script>
+
 <script>
     // Retrieve and parse customer data
     const customersArray = JSON.parse(localStorage.getItem("customers")) || [];
