--- a/admin.html/History.html
+++ b/admin.html/History.html
@@ -11,7 +11,7 @@
     <div id="card-container">
 
     </div>
-    
+    <script src="History.html"></script>
 <style>
   body {
     font-family: 'Poppins', sans-serif;
@@ -171,7 +171,7 @@ history_array.forEach(element => {
 `
 i++;
 });
-
+  
 </script>
 </body>
 
