--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-md-auto gap-2">
               <li class="nav-item rounded">
-                <a class="nav-link active" aria-current="page" href="/admin.html/SearchCustomer.html"><i class="bi bi-house-fill me-2"></i>Search Customer</a>
+                <a class="nav-link active" aria-current="page" href="http/admin.html/SearchCustomer.html"><i class="bi bi-house-fill me-2"></i>Search Customer</a>
                 
 
               </li>
@@ -29,7 +29,7 @@
               <li class="nav-item dropdown rounded">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person-fill me-2"></i>Admin</a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="/admin.html/History.html">History</a></li>
+                  <li><a class="dropdown-item" href="http/admin.html/History.html">History</a></li>
                   <li>
 
                     
