--- a/admin.html/SearchCustomer.html
+++ b/admin.html/SearchCustomer.html
@@ -121,7 +121,7 @@
 
     // Go to Menu page
     function gomenu() {
-        window.location.href = "http://127.0.0.1:5500/MenuPage.html#";
+        window.location.href = "admin.html";
     }
 </script>
 
