--- a/admin.html/History.html
+++ b/admin.html/History.html
@@ -10,139 +10,13 @@
     <h3>Customer Information</h3>
     <div id="card-container">
 
+      <link rel="stylesheet" href="style3.css">
+
     </div>
   
-<style>
-  body {
-    font-family: 'Poppins', sans-serif;
-    background-color: #fffbf0;
-    margin: 0;
-    padding: 0;
-  }
 
-  h3 {
-    text-align: center;
-    color: #d35400;
-    font-size: 28px;
-    font-weight: bold;
-    margin: 20px 0;
-  }
+  
 
-  #card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 20px;
-  }
-
-  .card {
-    background-color: #fff8e1;
-    padding: 20px;
-    margin: 15px;
-    border: 2px solid #ffcc80;
-    border-radius: 15px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    max-width: 300px;
-    text-align: center;
-  }
-
-  .card:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
-  }
-
-  .card h3 {
-    margin-bottom: 10px;
-    color: #e64a19;
-  }
-
-  .card p {
-    font-size: 16px;
-    color: #6d4c41;
-    margin: 5px 0;
-  }
-
-  .card p strong {
-    font-weight: bold;
-    color: #d35400;
-  }
-
-
-  body {
-    font-family: 'Poppins', sans-serif;
-    background-color: #f8f3e4;
-    margin: 0;
-    padding: 0;
-  }
-
-  h3 {
-    text-align: center;
-    color: #d35400;
-    font-size: 32px;
-    font-weight: bold;
-    margin: 20px 0;
-  }
-
-  #card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 20px;
-  }
-
-  .card {
-    background-color: #fff8e1;
-    padding: 20px;
-    margin: 15px;
-    border: 2px solid #ffc107;
-    border-radius: 15px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    max-width: 300px;
-    text-align: center;
-    font-family: 'Poppins', sans-serif;
-  }
-
-  .card:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
-  }
-
-  .card h3 {
-    margin-bottom: 10px;
-    color: #e64a19;
-  }
-
-  .card p {
-    font-size: 18px;
-    color: #5d4037;
-    margin: 5px 0;
-  }
-
-  .card p strong {
-    font-weight: bold;
-    color: #d35400;
-  }
-
-  .card p:first-of-type {
-    font-size: 20px;
-    margin-top: 15px;
-    color: #ff5722;
-  }
-
-  /* Add some spacing between cards */
-  .card:not(:last-child) {
-    margin-bottom: 20px;
-  }
-
-  /* For smaller screens, adjust card size */
-  @media (max-width: 768px) {
-    .card {
-      max-width: 90%;
-    }
-  }
-</style>
 
 
 
